fix text alignment

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -42,7 +42,6 @@ h3 {
 
     @include media-breakpoint-up(md) {
         display: flex;
-        align-items: baseline;
     }
 
     > .flex-item {
